Removed all other warnings, fixed generics ... note: in the petrinet project the warnings only get suppressed due to unchangeable used library removed dependencies to sun packages